--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -103,26 +103,26 @@
 
     <FrameLayout
         android:id="@+id/fl_MainActivityFragmentContainer"
-        android:elevation="-2dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/v_UserHeaderScrollHideMask"/>
+        android:layout_below="@id/v_UserHeaderScrollHideMask"
+        android:elevation="-2dp" />
 
     <View
         android:id="@+id/v_TranslucentEffectMask"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/v_UserHeaderScrollHideMask"
-        android:elevation="-1dp"
-        android:background="@color/colorTranslucentBackground" />
+        android:background="@color/colorTranslucentBackground"
+        android:elevation="-1dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/rl_UserHeaderContainer"
         android:layout_marginStart="@dimen/cardViewDoubleMargin"
-        android:layout_marginEnd="@dimen/cardViewDoubleMargin"
-        android:layout_marginTop="@dimen/cardViewDefaultMargin">
+        android:layout_marginTop="@dimen/cardViewDefaultMargin"
+        android:layout_marginEnd="@dimen/cardViewDoubleMargin">
 
         <RelativeLayout
             android:id="@+id/rl_NavbarContainer"
@@ -133,10 +133,10 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/cv_Navbar"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/userInfoNavbarHeight"
+                android:layout_height="wrap_content"
+                app:cardBackgroundColor="@color/colorCyan"
                 app:cardCornerRadius="@dimen/cardViewCornerRadius"
-                app:cardElevation="0dp"
-                app:cardBackgroundColor="@color/colorCyan">
+                app:cardElevation="0dp">
 
                 <LinearLayout
                     android:id="@+id/ll_NavbarInnerContainer"
@@ -145,87 +145,97 @@
                     android:orientation="vertical"
                     android:padding="@dimen/cardViewDefaultPadding">
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:id="@+id/ll_NavbarHomeContainer"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:orientation="horizontal">
+                        android:layout_marginBottom="20dp">
 
                         <ImageView
                             android:id="@+id/iv_NavbarHomeIcon"
-                            android:layout_width="48dp"
-                            android:layout_height="48dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignTop="@+id/tv_NavbarHomeText"
                             android:layout_marginEnd="@dimen/cardViewDefaultPadding"
-                            android:src="@drawable/ic_home_white_24dp"
-                            android:scaleType="fitCenter"/>
+                            android:baselineAlignBottom="@+id/tv_NavbarHomeText"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/ic_home_white_24dp" />
 
                         <TextView
                             android:id="@+id/tv_NavbarHomeText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
+                            android:layout_toEndOf="@+id/iv_NavbarHomeIcon"
+                            android:text="Home"
                             android:textColor="@color/colorWhite"
-                            android:textStyle="bold"
                             android:textSize="@dimen/userInfoNavbarTextSize"
-                            android:text="Home"/>
+                            android:textStyle="bold" />
 
-                    </LinearLayout>
+                    </RelativeLayout>
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:id="@+id/ll_NavbarConnectContainer"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginBottom="20dp">
 
                         <ImageView
                             android:id="@+id/iv_NavbarConnectIcon"
-                            android:layout_width="48dp"
-                            android:layout_height="48dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignTop="@+id/tv_NavbarConnectText"
                             android:layout_marginEnd="@dimen/cardViewDefaultPadding"
-                            android:src="@drawable/ic_people_white_24dp"
-                            android:scaleType="fitCenter"/>
+                            android:baselineAlignBottom="true"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/ic_people_white_24dp" />
 
                         <TextView
                             android:id="@+id/tv_NavbarConnectText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
+                            android:layout_toRightOf="@+id/iv_NavbarConnectIcon"
+                            android:text="Connect"
                             android:textColor="@color/colorWhite"
-                            android:textStyle="bold"
                             android:textSize="@dimen/userInfoNavbarTextSize"
-                            android:text="Connect"/>
+                            android:textStyle="bold" />
 
-                    </LinearLayout>
+                    </RelativeLayout>
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:id="@+id/ll_NavbarPastActivitiesContainer"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:orientation="horizontal">
+                        android:layout_marginBottom="20dp">
 
                         <ImageView
                             android:id="@+id/iv_NavbarPastActivitiesIcon"
-                            android:layout_width="48dp"
-                            android:layout_height="48dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignTop="@+id/tv_NavbarPastActivitiesText"
                             android:layout_marginEnd="@dimen/cardViewDefaultPadding"
-                            android:src="@drawable/ic_access_time_white_24dp"
-                            android:scaleType="fitCenter"/>
+                            android:baselineAlignBottom="true"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/ic_access_time_white_24dp" />
 
                         <TextView
                             android:id="@+id/tv_NavbarPastActivitiesText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
+                            android:layout_toRightOf="@id/iv_NavbarPastActivitiesIcon"
+                            android:text="Past"
                             android:textColor="@color/colorWhite"
-                            android:textStyle="bold"
                             android:textSize="@dimen/userInfoNavbarTextSize"
-                            android:text="Past"/>
+                            android:textStyle="bold" />
 
-                    </LinearLayout>
+                    </RelativeLayout>
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:id="@+id/ll_NavbarSettingsContainer"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -234,23 +244,26 @@
 
                         <ImageView
                             android:id="@+id/iv_NavbarSettingsIcon"
-                            android:layout_width="48dp"
-                            android:layout_height="48dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignTop="@+id/tv_NavbarSettingsText"
                             android:layout_marginEnd="@dimen/cardViewDefaultPadding"
-                            android:src="@drawable/ic_settings_white_24dp"
-                            android:scaleType="fitCenter"/>
+                            android:baselineAlignBottom="true"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/ic_settings_white_24dp" />
 
                         <TextView
                             android:id="@+id/tv_NavbarSettingsText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
+                            android:layout_toRightOf="@id/iv_NavbarSettingsIcon"
+                            android:text="Settings"
                             android:textColor="@color/colorWhite"
-                            android:textStyle="bold"
                             android:textSize="@dimen/userInfoNavbarTextSize"
-                            android:text="Settings"/>
+                            android:textStyle="bold" />
 
-                    </LinearLayout>
+                    </RelativeLayout>
 
                 </LinearLayout>
 
@@ -259,19 +272,25 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/cv_NavbarShadow"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/userInfoNavbarHeight"
-                android:layout_marginTop="5dp"
-                app:cardElevation="-1dp"
+                android:layout_height="25dp"
+                android:layout_alignTop="@id/cv_NavbarShadowGuide"
                 app:cardBackgroundColor="@color/colorShadowGray"
-                app:cardCornerRadius="@dimen/cardViewShadowCornerRadius"/>
+                app:cardCornerRadius="@dimen/cardViewShadowCornerRadius"
+                app:cardElevation="-1dp" />
+
+            <View
+                android:id="@+id/cv_NavbarShadowGuide"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:layout_alignBottom="@+id/cv_Navbar" />
 
         </RelativeLayout>
 
         <View
             android:layout_width="0dp"
-            android:layout_weight="0.525"
             android:layout_height="match_parent"
-            android:background="@color/colorTransparent"/>
+            android:layout_weight="0.525"
+            android:background="@color/colorTransparent" />
 
     </LinearLayout>
 
@@ -286,8 +305,8 @@
         android:layout_marginBottom="@dimen/fabMargin"
         android:adjustViewBounds="true"
         android:background="@null"
+        android:elevation="-2dp"
         android:onClick="startSuggestionsActivity"
         android:scaleType="fitCenter"
-        android:src="@mipmap/fab"
-        android:elevation="-2dp"/>
+        android:src="@mipmap/fab" />
 </RelativeLayout>
