Changed active colour to light green. Changed the active colour changing method.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorNavyBlue">#272830</color>
+    <color name="colorGreenish">#D2FFB7</color>
     <color name="colorLinkBlue">#8091BE</color>
     <color name="colorBlack">#000000</color>
     <color name="colorTransparent">@android:color/transparent</color>
