--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,13 +69,15 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:singleLine="true"
+                            android:ellipsize="marquee"
                             android:id="@+id/tv_UserSub"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="top"
                             android:text="Lorem ipsum dolor sit amet."
                             android:textColor="@color/colorWhite"
-                            android:textSize="20sp" />
+                            android:textSize="18sp" />
                     </LinearLayout>
                 </RelativeLayout>
             </LinearLayout>
@@ -150,7 +152,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:layout_marginBottom="20dp">
+                        android:layout_marginBottom="30dp">
 
                         <ImageView
                             android:id="@+id/iv_NavbarHomeIcon"
@@ -180,7 +182,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:layout_marginBottom="20dp">
+                        android:layout_marginBottom="30dp">
 
                         <ImageView
                             android:id="@+id/iv_NavbarConnectIcon"
@@ -210,7 +212,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:layout_marginBottom="20dp">
+                        android:layout_marginBottom="30dp">
 
                         <ImageView
                             android:id="@+id/iv_NavbarPastActivitiesIcon"
@@ -272,7 +274,7 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/cv_NavbarShadow"
                 android:layout_width="match_parent"
-                android:layout_height="25dp"
+                android:layout_height="55dp"
                 android:layout_alignTop="@id/cv_NavbarShadowGuide"
                 app:cardBackgroundColor="@color/colorShadowGray"
                 app:cardCornerRadius="@dimen/cardViewShadowCornerRadius"
@@ -281,7 +283,7 @@
             <View
                 android:id="@+id/cv_NavbarShadowGuide"
                 android:layout_width="match_parent"
-                android:layout_height="20dp"
+                android:layout_height="50dp"
                 android:layout_alignBottom="@+id/cv_Navbar" />
 
         </RelativeLayout>
