--- a/app/src/main/res/layout/item_activity_item.xml
+++ b/app/src/main/res/layout/item_activity_item.xml
@@ -100,16 +100,18 @@
                     style="?android:attr/borderlessButtonStyle"
                     android:elevation="0dp"
                     android:id="@+id/btn_NavigateActivity"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_centerHorizontal="true"
-                    android:autoSizeTextType="uniform"
                     android:background="@drawable/button_shadow"
                     android:drawableStart="@drawable/ic_map_marker"
                     android:drawablePadding="5dp"
-                    android:padding="10dp"
+                    android:paddingEnd="15dp"
+                    android:paddingStart="15dp"
+
                     android:text="Navigate"
+                    android:textSize="18sp"
                     android:textAllCaps="false"
                     android:textColor="@color/colorWhite"
                     android:textStyle="bold" />
