--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,9 @@
                             android:text="千花藤原"
                             android:textColor="@color/colorWhite"
                             android:textSize="@dimen/userInfoNavbarTextSize"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            android:maxLines="1"
+                            android:ellipsize="end"/>
 
                         <TextView
                             android:singleLine="true"
