--- a/app/src/main/res/layout/activity_questionnaire.xml
+++ b/app/src/main/res/layout/activity_questionnaire.xml
@@ -9,10 +9,11 @@
         android:id="@+id/questionnaire_top_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="@dimen/cardViewDefaultPadding">
 
         <ImageView
-            android:layout_weight="0.5"
+            android:layout_weight="0.2"
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:src="@drawable/ic_help_black_24dp"
@@ -20,8 +21,8 @@
 
         <LinearLayout
             android:layout_gravity="center_vertical"
-            android:layout_weight="0.7"
-            android:layout_width="wrap_content"
+            android:layout_weight="0.8"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
