Questionnaire fragment updated

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorWhite">#ffffff</color>
     <color name="colorNavyBlue">#272830</color>
     <color name="colorGreenishBlue">#00ABC3</color>
+    <color name="colorParkGreen">#9ECC4B</color>
     <color name="colorGreenish">#D2FFB7</color>
     <color name="progressBarPink">#FFBDB2</color>
     <color name="colorLinkBlue">#8091BE</color>
