--- a/app/src/main/res/layout/activity_questionnaire.xml
+++ b/app/src/main/res/layout/activity_questionnaire.xml
@@ -6,12 +6,14 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+
         android:id="@+id/questionnaire_top_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <ImageView
+            android:layout_marginStart="15dp"
             android:layout_weight="0.5"
             android:layout_width="0dp"
             android:layout_height="80dp"
