--- a/app/src/main/res/layout/fragment_questionaire_age_group.xml
+++ b/app/src/main/res/layout/fragment_questionaire_age_group.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
-        app:cardBackgroundColor="@color/colorGreenish"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
+        app:cardBackgroundColor="@color/colorParkGreen"
         app:cardCornerRadius="@dimen/cardViewCornerRadius">
 
         <LinearLayout
@@ -17,12 +17,103 @@
             android:orientation="vertical">
 
             <ImageView
-                android:layout_marginTop="20dp"
-                android:layout_gravity="center_horizontal"
                 android:layout_width="250dp"
                 android:layout_height="250dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp"
                 android:src="@drawable/ic_park" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="What is your age group?"
+                android:textAlignment="center"
+                android:textColor="@color/colorWhite"
+                android:textSize="35sp"
+                android:textStyle="bold" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="5dp"
+                android:layout_margin="10dp"
+                android:background="@color/colorWhite" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal">
+
+                <RadioGroup
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <RadioButton
+                        android:id="@+id/rb_AgeGroup1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="20dp"
+                        android:buttonTint="@color/colorGreenishBlue"
+                        android:padding="5dp"
+                        android:text="12 - 17"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                    <RadioButton
+                        android:id="@+id/rb_AgeGroup2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="20dp"
+                        android:buttonTint="@color/colorGreenishBlue"
+                        android:padding="5dp"
+                        android:text="18 - 24"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                    <RadioButton
+                        android:id="@+id/rb_AgeGroup3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="20dp"
+                        android:buttonTint="@color/colorGreenishBlue"
+                        android:padding="5dp"
+                        android:text="24 - 44"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                    <RadioButton
+                        android:id="@+id/rb_AgeGroup4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="20dp"
+                        android:buttonTint="@color/colorGreenishBlue"
+                        android:padding="5dp"
+                        android:text="44 - 64"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                    <RadioButton
+                        android:id="@+id/rb_AgeGroup5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/colorGreenishBlue"
+                        android:padding="5dp"
+                        android:text="above 64"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                </RadioGroup>
+            </LinearLayout>
+
         </LinearLayout>
+
 
     </android.support.v7.widget.CardView>
 
