--- a/app/src/main/res/layout/fragment_questionaire_age_group.xml
+++ b/app/src/main/res/layout/fragment_questionaire_age_group.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rl_AgeGroupFragmentContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cv_AgeGroupFragmentCard"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
@@ -12,11 +14,13 @@
         app:cardCornerRadius="@dimen/cardViewCornerRadius">
 
         <LinearLayout
+            android:id="@+id/ll_AgeGroupFragmentInnerContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/iv_AgeGroupIcon"
                 android:layout_width="250dp"
                 android:layout_height="250dp"
                 android:layout_gravity="center_horizontal"
@@ -24,6 +28,7 @@
                 android:src="@drawable/ic_park" />
 
             <TextView
+                android:id="@+id/iv_AgeGroupQuestion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -34,12 +39,14 @@
                 android:textStyle="bold" />
 
             <View
+                android:id="@+id/v_AgeGroupDivider"
                 android:layout_width="match_parent"
                 android:layout_height="5dp"
                 android:layout_margin="10dp"
                 android:background="@color/colorWhite" />
 
             <LinearLayout
+                android:id="@+id/ll_AgeGroupOptionsContainer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -47,6 +54,7 @@
                 android:orientation="horizontal">
 
                 <RadioGroup
+                    android:id="@+id/rg_AgeGroupOptionsGroup"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
@@ -111,10 +119,6 @@
 
                 </RadioGroup>
             </LinearLayout>
-
         </LinearLayout>
-
-
     </android.support.v7.widget.CardView>
-
 </RelativeLayout>
