Questionnaire fragment updated

--- a/app/src/main/res/layout/fragment_questionaire_bmi.xml
+++ b/app/src/main/res/layout/fragment_questionaire_bmi.xml
@@ -22,7 +22,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
                 android:src="@drawable/ic_bmi"
-                android:tint="@color/colorGreenishBlue" />
+                android:tint="@color/colorGreenish" />
 
             <TextView
                 android:layout_width="match_parent"
